modules/vpc/02-igw.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.vpc_main.id

  tags = {
    Name        = "${var.environment}-internet_gateway"
    Environment = var.environment
  }
}
